# convene

./: .gitignore  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/actions/snapshot/: action.yml
.github/workflows/: ci.yml  release.yml
adding_a_city/: index.html
changelog/: index.html
docs/: adding_a_city.md  changelog.md  getting-started.md  index.md  writing_an_adapter.md
docs/recipes/: github_action.md  sqlite.md  sync.md
docs/reference/: api.md  cli.md
getting-started/: index.html
recipes/github_action/: index.html
recipes/sqlite/: index.html
recipes/sync/: index.html
reference/api/: index.html
reference/cli/: index.html
search/: search_index.json
src/convene/: __init__.py  __main__.py  cache.py  cli.py  ical.py  models.py  registry.py  sqlite_sink.py
src/convene/adapters/: __init__.py  granicus.py  legistar.py
tests/: test_cache.py  test_granicus.py  test_ical.py  test_legistar.py  test_legistar_retry.py  test_sqlite_sink.py
tests/fixtures/: phila_bodies.json  phila_event_6376_items.json  phila_events.json  phila_matter_27257_histories.json  phila_matter_27257_sponsors.json  phila_matters.json  phila_person_2_officerecords.json  phila_persons.json  seattle_votes_123047.json  stpaul_view_37.html
writing_an_adapter/: index.html
