[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "convene"
version = "0.4.0"
description = "Pull municipal meeting data from Legistar and friends into one normalized JSON shape."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Charlie Tonneslan", email = "cst0520@gmail.com" },
]
requires-python = ">=3.11"
keywords = ["civic-tech", "legistar", "open-civic-data", "scraper", "municipal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx >= 0.27",
    "pydantic >= 2.6",
    "typer >= 0.12",
    "rich >= 13.7",
    "beautifulsoup4 >= 4.12",
]

[project.optional-dependencies]
dev = [
    "pytest >= 8.0",
    "pytest-httpx >= 0.30",
    "ruff >= 0.4",
]
docs = [
    "mkdocs-material >= 9.5",
]

[project.scripts]
convene = "convene.cli:app"

[project.urls]
Documentation = "https://c-tonneslan.github.io/convene/"
Source = "https://github.com/c-tonneslan/convene"
Issues = "https://github.com/c-tonneslan/convene/issues"
Changelog = "https://github.com/c-tonneslan/convene/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/convene"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# typer's whole API is built around function-call defaults
"src/convene/cli.py" = ["B008"]
